<resources>
    <string name="app_name">Football</string>
    <string name="splash_string_loading_data">Loading Data...</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="match_name_tab">Matchs</string>
    <string name="football_name_tab">Teams</string>
    <string name="my_favorites">Favorites</string>
    <string name="adapter_str_vs">vs</string>
    <string name="title_activity_about_teams">AboutTeams</string>
    <string name="title_activity_detail_match">DetailMatchActivity</string>
    <string name="title_activity_player_details">Player Details</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_m">Height (m)</string>
...
    <string name="search">Cari di sini</string>
    <string name="aboutteams_tab_title_overview">Overview</string>
    <string name="aboutteams_tab_title_details">Details</string>
    <string name="aboutteams_tab_title_player">Player</string>
    <string name="aboutteams_teambadge_contentdesc">Team badges</string>
    <string name="fragment_favorites_tab_title_match">Fav Matchs</string>
    <string name="fragment_favorites_tab_title_teams">Fav Teams</string>
    <string name="fragment_match_tab_title_next">Next</string>
    <string name="fragment_match_tab_title_past">Past</string>
    <string name="home_actionbar_title_menumatch">Football Match</string>
    <string name="home_actionbar_title_menuteams">List Team</string>
    <string name="home_actionbar_title_menufavorites">List Favorites</string>
    <string name="fragment_favorite_error_nullmatchs">Wahh... nampakya kamu belum suka match apapun :(</string>
    <string name="fragment_favorite_error_nullteams">Wahh... nampakya kamu belum suka team apapun :(</string>
</resources>

