<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            app:showAsAction="always|collapseActionView"
            app:actionViewClass="com.apwdevs.apps.football.activities.home.homeUtility.CustomSearchView"
            android:title="@string/search"/>
</menu>