<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/fragment_match_id_appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.design.widget.TabLayout
                android:id="@+id/fragment_match_id_tabLayout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:tabMode="fixed"
                app:tabGravity="fill">
            <android.support.design.widget.TabItem
                    android:id="@+id/next_match"
                    android:text="@string/fragment_match_tab_title_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <android.support.design.widget.TabItem
                    android:id="@+id/last_match"
                    android:text="@string/fragment_match_tab_title_past"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.view.ViewPager
            android:layout_below="@id/fragment_match_id_appbar"
            android:id="@+id/fragment_match_id_viewpagerholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</RelativeLayout>